--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         <option value="Varanasi">Varanasi</option>
                                     </select>
                                     <div class="invalid-feedback">
-                                        Please provide a valid city.
+                                        Please provide a valid city.w
                                     </div>
                                 </div>
                                 <div class="form-check mb-2">
@@ -411,13 +411,13 @@
                             <div class="col-lg-6 mb-3">
                                 <div class="contact-details">
                                     <h5>Customer Care Number</h5>
-                                    <span>+91-8044481111</span>
+                                    <span><a href="tel:8071680844" style="color: #6F7172;text-decoration: none;">+91-8071680844</a></span>
                                 </div>
                             </div>
                             <div class="col-lg-6 mb-3">
                                 <div class="contact-details">
                                     <h5>Email Id</h5>
-                                    <span>care@mdrcindia.com</span>
+                                    <span><a href="mailto:care@mdrcindia.com" style="color: #6F7172;text-decoration: none;">care@mdrcindia.com</a></span>
                                 </div>
                             </div>
                             <div class="col-lg-12">
