--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                             <div class="col-lg-6 mb-3">
                                 <div class="contact-details">
                                     <h5>Customer Care Number</h5>
-                                    <span><a href="tel:8071680844" style="color: #6F7172;text-decoration: none;">+91-8071680844</a></span>
+                                    <span><a href="tel:+918071680844" style="color: #6F7172;text-decoration: none;">+91-8071680844</a></span>
                                 </div>
                             </div>
                             <div class="col-lg-6 mb-3">
