--- a/osteoporosis.html
+++ b/osteoporosis.html
@@ -127,7 +127,7 @@
         <div class="test-details-section mb-5">
             <div class="container">
                 <div class="section-title mb-3">
-                    <h5>Test Details</h5>
+                    <h5>Who Should Get This Test Done</h5>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 mb-3">
