--- a/osteoporosis.html
+++ b/osteoporosis.html
@@ -48,7 +48,7 @@
                         <div class="form-top-mobile">
                             <div class="d-flex form-top-mobile-content">
                                 <h3 class="text-center">MODERN OSTEOPOROSIS PACKAGE</h3>
-                                <p class="text-center">Validity - 26th Jan till 15th Feb 2025</p>
+                                <!-- <p class="text-center">Validity - 26th Jan till 15th Feb 2025</p> -->
                             </div>
                         </div>
                         <div class="form-style">
