--- a/modern-fit.html
+++ b/modern-fit.html
@@ -423,6 +423,6 @@
     </div>
 
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/fit.js"></script>
 </body>
 </html>
