--- a/osteoporosis.html
+++ b/osteoporosis.html
@@ -419,6 +419,6 @@
     </div>
 
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/osto.js"></script>
 </body>
 </html>
