--- a/nirmaya-1.1.html
+++ b/nirmaya-1.1.html
@@ -417,6 +417,6 @@
     </div>
 
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/nirmaya-1.js"></script>
 </body>
 </html>
